--- a/src/com/fameden/fxml/TwitterIntegrationNewBGandTrans.fxml
+++ b/src/com/fameden/fxml/TwitterIntegrationNewBGandTrans.fxml
@@ -28,7 +28,7 @@
           <children>
             <TextField fx:id="emailAddressTextField" prefHeight="36.0" prefWidth="220.0" promptText="Email Address" style="-fx-font: 17px Tahoma;&#10;-fx-fill: linear-gradient(from 0% 0% to 100% 200%, repeat, aqua 0%, red 50%);&#10;-fx-stroke: black;&#10;-fx-stroke-width: 1;&#10; -fx-prompt-text-fill:grey;">
               <effect>
-                <InnerShadow height="8.015625" radius="3.50390625" width="8.0" />
+                <InnerShadow height="8.00390625" radius="3.5009765625" width="8.0" />
               </effect>
             </TextField>
           </children>
@@ -37,7 +37,7 @@
           <children>
             <TextField id="userNameTextField" fx:id="pinTextField" prefHeight="36.0" prefWidth="220.0" promptText="Twitter Auth Code" style="-fx-font: 17px Tahoma;&#10;-fx-fill: linear-gradient(from 0% 0% to 100% 200%, repeat, aqua 0%, red 50%);&#10;-fx-stroke: black;&#10;-fx-stroke-width: 1;&#10; -fx-prompt-text-fill:grey;">
               <effect>
-                <InnerShadow height="8.015625" radius="3.50390625" width="8.0" />
+                <InnerShadow height="8.00390625" radius="3.5009765625" width="8.0" />
               </effect>
             </TextField>
           </children>
@@ -46,7 +46,7 @@
           <children>
             <PasswordField fx:id="passwordTextField" prefHeight="36.0" prefWidth="220.0" promptText="Password" style="-fx-font: 17px Tahoma;&#10;-fx-fill: linear-gradient(from 0% 0% to 100% 200%, repeat, aqua 0%, red 50%);&#10;-fx-stroke: black;&#10;-fx-stroke-width: 1;&#10; -fx-prompt-text-fill:grey;">
               <effect>
-                <InnerShadow height="8.015625" radius="3.50390625" width="8.0" />
+                <InnerShadow height="8.00390625" radius="3.5009765625" width="8.0" />
               </effect>
             </PasswordField>
           </children>
@@ -55,7 +55,7 @@
           <children>
             <PasswordField fx:id="confirmPasswordTextField" prefHeight="36.0" prefWidth="220.0" promptText="Re Enter Password" style="-fx-font: 17px Tahoma;&#10;-fx-fill: linear-gradient(from 0% 0% to 100% 200%, repeat, aqua 0%, red 50%);&#10;-fx-stroke: black;&#10;-fx-stroke-width: 1;&#10; -fx-prompt-text-fill:grey;">
               <effect>
-                <InnerShadow height="8.015625" radius="3.50390625" width="8.0" />
+                <InnerShadow height="8.00390625" radius="3.5009765625" width="8.0" />
               </effect>
             </PasswordField>
           </children>
@@ -74,7 +74,7 @@
         <Image url="@../image/PleaseWait.gif" preserveRatio="false" smooth="false" />
       </image>
     </ImageView>
-    <Button defaultButton="true" layoutX="14.0" layoutY="14.0" minWidth="13.0" mnemonicParsing="false" onAction="#reloadTwitterSignUp" prefHeight="406.0" prefWidth="16.0" text="Re Load Twitter Page" wrapText="true" />
+    <Button defaultButton="true" layoutX="200.0" layoutY="14.0" minWidth="13.0" mnemonicParsing="false" onAction="#reloadTwitterSignUp" prefHeight="40.0" prefWidth="133.0" text="Reload Page" wrapText="true" />
     <ImageView fx:id="noInternetConnection" fitHeight="316.0" fitWidth="316.0" layoutX="30.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
       <image>
         <Image url="@../image/tumblr_m2s8euYIx01qbe0gto1_400.gif" preserveRatio="false" smooth="false" />
